--- a/app/controls/menu/menu.latte
+++ b/app/controls/menu/menu.latte
@@ -48,7 +48,7 @@
 					</a>
 					<ul class="dropdown text-right">
 						<li class="divider"></li>
-						<li><a href="#">Nastavení profilu</a></li>
+						<li><a href="{plink Profile:default}">Nastavení profilu</a></li>
 						<li class="divider"></li>
 						<li><a href="{plink logout!}">Odhlásit se</a></li>
 					</ul>
