--- a/app/presenters/templates/Lesson/default.latte
+++ b/app/presenters/templates/Lesson/default.latte
@@ -57,6 +57,12 @@
 		{/if}
 		<hr class="white"/>
 		<h3>Písemky</h3>
+
+		{if $user->isInRole('teacher')}
+			<hr class="white"/>
+			<h3>Studenti</h3>
+			{control students}
+		{/if}
 	</div>
 {/block}
 
