--- a/scss/app.scss
+++ b/scss/app.scss
@@ -435,3 +435,15 @@ div.row.padding {
 #chatStatus {
   color: darkgray;
 }
+
+a.success {
+  color: #43AC6A;
+}
+
+a.alert {
+  color: #f04124;
+}
+
+span.grey {
+  color: #a9a9a9;
+}
