--- a/app/presenters/templates/Teaching/default.latte
+++ b/app/presenters/templates/Teaching/default.latte
@@ -1,3 +1,10 @@
+{block leftMenu}
+	<div class="column small-12 large-2 activities">
+		<h3>Studenti</h3>
+		{control students}
+	</div>
+{/block}
+
 {block content}
 	{if $nextLesson}
 		<div class="row">
