--- a/app/presenters/templates/Students/default.latte
+++ b/app/presenters/templates/Students/default.latte
@@ -1,5 +1,7 @@
 {block content}
+
 	<div class="small-12 large-9">
+		<a href="{link generateNewPassword!}" class="button small">Vygenerovat nové heslo</a>
 		{control form}
 	</div>
 {/block}
