--- a/app/presenters/templates/Settings/default.latte
+++ b/app/presenters/templates/Settings/default.latte
@@ -99,10 +99,52 @@
 				{/if}
 			{/if}
 		{/snippet}
-
 	{/if}
 
-	{if $user->isAllowed('settings', 'classes')}
+	{if $user->isAllowed('settings', 'teachers')}
+		<h2>Správa učitelů</h2>
+		<a n:href="Teachers:default" class="button tiny">Přidat učitele</a>
+
+		<div class="row collapse prefix-radius">
+			<div class="small-1 columns left">
+				<span class="prefix"><i class="fi-magnifying-glass"></i></span>
+			</div>
+			<div class="small-11 large-8 columns left">
+				<input type="text" class="liveSearch" data-url="{link searchTeachers!}" data-spinner="teacherSpinner" placeholder="Začněte vyhledávat učitele..."/>
+			</div>
+		</div>
+
+		{snippet teachers}
+			<img src="{$basePath}/images/spinner-bubble.svg" alt="" id="teacherSpinner" class="hide"/>
+
+			{if isset($teachers)}
+				{if !count($teachers)}
+					<div class="panel small-12 large-9">Nenalezeni žádní učitelé</div>
+				{else}
+					<table class="small-12 large-9">
+						<thead>
+						<tr>
+							<th>Jméno a příjmení</th>
+							<th>Místnost</th>
+							<th></th>
+						</tr>
+						</thead>
+						<tbody>
+						{foreach $teachers as $teacher}
+							<tr>
+								<td>{$teacher->getSurname()} {$teacher->getName()}</td>
+								<td>{$teacher->getRoom()}</td>
+								<td><a href="{link Teachers:default teacherId => $teacher->getId()}" class="button secondary tiny">Editovat</a></td>
+							</tr>
+						{/foreach}
+						</tbody>
+					</table>
+				{/if}
+			{/if}
+		{/snippet}
+	{/if}
+
+	{if $user->isAllowed('settings', 'subjects')}
 		<h2>Správa předmětů</h2>
 		<a href="{link Subjects:default}"><button class="button tiny">Přidat předmět</button></a>
 
