--- a/app/presenters/templates/Login/default.latte
+++ b/app/presenters/templates/Login/default.latte
@@ -1,4 +1,9 @@
 {block content}
-	<h1>fdfd</h1>
-	{control loginForm}
+	<div class="row">
+		<div class="small-12" id="loginForm">
+			<h1>Vítejte!</h1>
+			<p>Přihlašte se údaji, které jste dostali od svého učitele. Pokud jste je zapomněli, požádejte jej o nové.</p>
+			{control loginForm}
+		</div>
+	</div>
 {/block}
