--- a/app/controls/menu/menu.latte
+++ b/app/controls/menu/menu.latte
@@ -20,7 +20,7 @@
 				</ul>
 			</li>
 			<li class="divider"></li>
-			<li><a href="#">Vyhledávání</a></li>
+			<li><a href="{plink Search:default}">Vyhledávání</a></li>
 			<li class="divider"></li>
 			{if $user->isAllowed('settings')}
 				<li><a href="{plink Settings:default}">Nastavení</a></li>
